--- a/MyCart/templates/index.html
+++ b/MyCart/templates/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pedro Cart</title>
+    <title>Keyboard Zone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
 
         <div class="jumbotron text-center">
-            <h1 class="display-4">Pedro Cart</h1>
+            <h1 class="display-4">Keyboard Zone</h1>
             <p class="lead">E-commerce food app based on Django with an additional blog app</p>
             <hr class="my-4">
             <p>E-commerce food app based on Django with an additional blog app</p>
             <p class="lead text-center">
                 <a class="btn btn-primary btn-lg" href="/shop" role="button">Go To Shop</a>
-                <a class="btn btn-primary btn-lg" href="/blog" role="button">Go To Blog</a>
+                <a class="btn btn-primary btn-lg disabled" href="/blog" role="button" aria-disabled="true">Go To Blog</a>
             </p>
         </div>
     </div>
