--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <title>{% block title %} CLOUD KHANAVALI {% endblock %}</title>
+        <title>{% block title %} KeyboardZone {% endblock %}</title>
         
         
     <style>
@@ -22,7 +22,7 @@
 
     <!--  navigation bar code starts here-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand px-3" href="/shop">CLOUD KHANAVALI</a>
+        <a class="navbar-brand px-3" href="/shop">KeyboardZone</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Doesnt work" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0 mx-2" type="submit">Search</button>
             </form>
             <a href = 'checkout'>
