--- a/MyCart/templates/index.html
+++ b/MyCart/templates/index.html
@@ -11,7 +11,7 @@
 
         <div class="jumbotron text-center">
             <h1 class="display-4">Keyboard Zone</h1>
-            <p class="lead">E-commerce food app based on Django with an additional blog app</p>
+            <p class="lead">E-commerce tech app for keyboards based on Django with an additional blog app</p>
             <hr class="my-4">
             <p>E-commerce food app based on Django with an additional blog app</p>
             <p class="lead text-center">
